# renderdog

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
crates/renderdog-automation/: README.md
crates/renderdog-automation/examples/: debug_descriptor_bindings.rs  diagnose_environment.rs  export_bundle_from_capture.rs  replay_save_outputs_png.rs  test_pipeline_details.rs
crates/renderdog-automation/scripts/: debug_descriptor_bindings.py  debug_layout_chunks.py  debug_resource_bindings.py  export_actions_jsonl.py  export_bindings_index_jsonl.py  find_events_json.py  find_resource_uses_json.py  get_buffer_changes_delta_json.py  get_buffer_details_json.py  get_event_pipeline_state_json.py  get_events_json.py  get_pipeline_binding_changes_delta_json.py  get_pipeline_details_json.py  get_resource_changed_event_ids_json.py  get_shader_details_json.py  get_shader_info_json.py  get_texture_changes_delta_json.py  get_texture_details_json.py  replay_list_textures_json.py  replay_pick_pixel_json.py  replay_save_outputs_png_json.py  replay_save_texture_png_json.py  search_resources_json.py  trigger_capture.py
crates/renderdog-automation/src/: lib.rs  replay.rs  toolchain.rs  workflows.rs
crates/renderdog-mcp/: README.md
crates/renderdog-mcp/src/: main.rs
crates/renderdog-replay/: README.md
crates/renderdog-sys/src/: lib.rs
crates/renderdog/src/: in_app.rs  lib.rs  settings.rs
docs/guides/: gpu-markers.md
scripts/: regen_bindings.py
